--- a/admin/advertising.html
+++ b/admin/advertising.html
@@ -61,7 +61,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top m-b-0">
             <div class="navbar-header"> <a class="navbar-toggle hidden-sm hidden-md hidden-lg " href="javascript:void(0)" data-toggle="collapse" data-target=".navbar-collapse"><i class="ti-menu"></i></a>
-                <div class="top-left-part"><a class="logo" href="index.html"><b><img src="../plugins/images/eliteadmin-logo.png" alt="home" /></b><span class="hidden-xs"><strong>elite</strong>hospital</span></a></div>
+                <div class="top-left-part"><a class="logo" href="index.html"><b><img src="./images/baby-logo.png" alt="home" /></b><!--<span class="hidden-xs"><strong>elite</strong>hospital</span>--></a></div>
                 <ul class="nav navbar-top-links navbar-left hidden-xs">
                     <li><a href="javascript:void(0)" class="open-close hidden-xs waves-effect waves-light"><i class="icon-arrow-left-circle ti-menu"></i></a></li>
                     <li>
@@ -88,7 +88,7 @@
                         <!-- /input-group -->
                     </li>
                     <li class="user-pro">
-                        <a href="#" class="waves-effect"><img src="../plugins/images/users/d1.jpg" alt="user-img" class="img-circle"> <span class="hide-menu">Dr. Steve Gection<span class="fa arrow"></span></span>
+                        <a href="#" class="waves-effect"><img src="../plugins/images/users/d1.jpg" alt="user-img" class="img-circle"> <span class="hide-menu">Ken Dietrich<span class="fa arrow"></span></span>
                         </a>
                         <ul class="nav nav-second-level">
                             <li><a href="my-profile.html"><i class="ti-user"></i> My Profile</a></li>
@@ -99,13 +99,13 @@
                     </li>
                     <li> <a href="javascript:void(0);" class="waves-effect"><i class="linea-icon linea-basic fa-fw text-danger" data-icon="7"></i> <span class="hide-menu text-danger">Help <span class="fa arrow"></a>
                         <ul class="nav nav-second-level">
-                            <li> <a href="../eliteadmin-hospital/index.html">Tutorial</a> </li>
+                            <li> <a href="index.html?view=tutorial">Tutorial</a> </li>
                             <li> <a href="support.html">Support</a> </li>
                             
                         </ul>
                     </li>
                     <li> <a href="queuesetting.html" class="waves-effect "><i data-icon="P" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">Queue Settings</span></a> </li>
-                    <li> <a href="managequeue.html" class="waves-effect "><i data-icon="P" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">Manage Queue</span></a> </li>
+                    <li> <a href="index.html?view=managequeue" class="waves-effect "><i data-icon="P" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">Manage Queue</span></a> </li>
                     <li> <a href="advertising.html" class="waves-effect active"><i data-icon="P" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">Advertising / Display</span></a> </li>
                     <li> <a href="app.html" class="waves-effect"><i data-icon="P" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">App Setting</span></a> </li>
                     <li> <a href="store-timing.html" class="waves-effect"><i data-icon="P" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">Scheduler</span></a> </li>
@@ -240,7 +240,7 @@
                 
             </div>
             <!-- /.container-fluid -->
-            <footer class="footer text-center"> 2017 &copy; Elite Admin brought to you by themedesigner.in </footer>
+            <footer class="footer text-center"> 2017 &copy; Patient Q by Fulcrum Design, LLC </footer>
         </div>
         <!-- /#page-wrapper -->
     </div>
