--- a/admin/footer.html
+++ b/admin/footer.html
@@ -1,2 +1,2 @@
  <!-- /.container-fluid -->
-<footer class="footer text-center"> 2017 &copy; Queuemobile </footer>
+<footer class="footer text-center"> 2017 &copy; Patient Q by Fulcrum Design, LLC </footer>
