--- a/admin/index.html
+++ b/admin/index.html
@@ -49,7 +49,10 @@
 
         <!-- Page Content -->
         <div id="page-wrapper">
-            <div id="maincontent"></div>
+            <div id="maincontent">
+
+                <img src="./images/tutorial.png">
+            </div>
             <!-- /.container-fluid -->
             <footer id="bottomnav"></footer>
         </div>
