--- a/admin/leftnav.html
+++ b/admin/leftnav.html
@@ -11,7 +11,7 @@
                 <!-- /input-group -->
             </li>
             <li class="user-pro">
-                <a href="#" class="waves-effect"><img src="../plugins/images/users/d1.jpg" alt="user-img" class="img-circle"> <span class="hide-menu">Lavy Toteza<span class="fa arrow"></span></span>
+                <a href="#" class="waves-effect"><img src="../plugins/images/users/d1.jpg" alt="user-img" class="img-circle"> <span class="hide-menu">Ken Dietrich<span class="fa arrow"></span></span>
                         </a>
                 <ul class="nav nav-second-level">
                     <li><a href="my-profile.html"><i class="ti-user"></i> My Profile</a></li>
@@ -22,7 +22,7 @@
             </li>
             <li> <a href="javascript:void(0);" class="waves-effect"><i class="linea-icon linea-basic fa-fw text-danger" data-icon="7"></i> <span class="hide-menu text-danger">Help <span class="fa arrow"></a>
                 <ul class="nav nav-second-level">
-                    <li> <a href="../eliteadmin-hospital/index.html">Tutorial</a> </li>
+                    <li> <a href="index.html?view=tutorial">Tutorial</a> </li>
                     <li> <a href="support.html">Support</a> </li>
 
                 </ul>
